--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,19 @@
 dist: xenial
 language: python
 python:
-  - "3.6"
-# command to install dependencies
+- '3.6'
+
+before_install:
+- openssl aes-256-cbc -K $encrypted_706e60a6745f_key -iv $encrypted_706e60a6745f_iv
+  -in app-engine-client-secret.json.enc -out app-engine-client-secret.json -d
+
 install:
-  - pip install -r requirements.txt
-# command to run tests
+- pip install -r requirements.txt
+
 script:
-  - python manage.py test
+- python manage.py test
+
+deploy:
+  provider: gae
+  keyfile: "app-engine-client-secret.json"
+  project: "serene-column-179904"
