--- a/.travis.yml
+++ b/.travis.yml
@@ -2,17 +2,10 @@ dist: xenial
 language: python
 python:
 - '3.7'
-before_install:
-- openssl aes-256-cbc -K $encrypted_706e60a6745f_key -iv $encrypted_706e60a6745f_iv
-  -in app-engine-client-secret.json.enc -out app-engine-client-secret.json -d
 install:
 - pip install -r requirements.txt
 script:
 - python manage.py test
 deploy:
-  provider: gae
-  keyfile: app-engine-client-secret.json
-  project: serene-column-179904
-  default: true
-  on:
-    all_branches: true
+  provider: script
+  script:
