--- a/.travis.yml
+++ b/.travis.yml
@@ -2,12 +2,17 @@ dist: xenial
 language: python
 python:
 - '3.7'
+services:
+  - docker
 install:
 - pip install -r requirements.txt
 script:
 - python manage.py test
 before_deploy:
   - bash gcloud-install.sh
+  - docker build -t $TRAVIS_REPO_SLUG:$TRAVIS_BRANCH .
+  - docker login -u $DOCKERHUB_USERNAME -p $DOCKERHUB_PASSWORD
+  - docker push $TRAVIS_REPO_SLUG:$TRAVIS_BRANCH
 deploy:
   provider: script
   script: bash gke-deploy.sh
