--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,6 @@ dist: xenial
 language: python
 python:
 - '3.7'
-before_install:
-- openssl aes-256-cbc -K $encrypted_706e60a6745f_key -iv $encrypted_706e60a6745f_iv
-  -in travis-gke-client-secret.json.enc -out travis-gke-client-secret.json -d
-
 services:
 - docker
 env:
@@ -19,20 +15,26 @@ env:
   - CI_SCRIPTS="./gke_scripts"
   - GCLOUD_PROJECT_ID="serene-column-179904"
   - DEPLOYMENT_YAML="gke-deployment.yaml"
-
+before_install:
+- openssl aes-256-cbc -K $encrypted_706e60a6745f_key -iv $encrypted_706e60a6745f_iv
+  -in travis-gke-client-secret.json.enc -out travis-gke-client-secret.json -d
+- ls -la travis-gke-client-secret.json
 install:
 - pip install -r requirements.txt
-
 script:
 - python manage.py test
-
 before_deploy:
 - docker build -t ${TRAVIS_REPO_SLUG,,}:${TRAVIS_BRANCH,,} .
 - docker login -u $DOCKERHUB_USERNAME -p $DOCKERHUB_PASSWORD
 - docker push ${TRAVIS_REPO_SLUG,,}:${TRAVIS_BRANCH,,}
 deploy:
   provider: script
-  script: bash $CI_SCRIPTS/script.sh ${PROJECT_NAME,,} ${TRAVIS_REPO_SLUG,,} ${TRAVIS_REPO_SLUG,,} || travis_terminate 1
+  script: bash $CI_SCRIPTS/script.sh ${PROJECT_NAME,,} ${TRAVIS_REPO_SLUG,,} ${TRAVIS_REPO_SLUG,,}
+    || travis_terminate 1
   on:
     branch: google-kubernetes-engine
+cache:
+  directories:
+  - "$GCLOUD_HOME"
+  - virtualenv
 
