fixed travis.yml - hopefully

--- a/.travis.yml
+++ b/.travis.yml
@@ -41,8 +41,10 @@ jobs:
         - GCLOUD_CLUSTER_NAME="spartanx-gke-cluster"
         - CI_SCRIPTS="./gke_scripts"
         - GCLOUD_PROJECT_ID="serene-column-179904"
-      install:
+      before_cache:
         - bash $CI_SCRIPTS/gcloud-install.sh
+      install:
+        skip
       script:
         skip
       before_deploy:
