fixed travis.yml - hopefully

--- a/.travis.yml
+++ b/.travis.yml
@@ -41,8 +41,8 @@ jobs:
         - GCLOUD_CLUSTER_NAME="spartanx-gke-cluster"
         - CI_SCRIPTS="./gke_scripts"
         - GCLOUD_PROJECT_ID="serene-column-179904"
-      before_cache:
-        - bash $CI_SCRIPTS/gcloud-install.sh
+#      before_cache:
+#        - bash $CI_SCRIPTS/gcloud-install.sh
       install:
         skip
       script:
@@ -50,13 +50,13 @@ jobs:
       before_deploy:
         - openssl aes-256-cbc -K $encrypted_706e60a6745f_key -iv $encrypted_706e60a6745f_iv
           -in travis-gke-client-secret.json.enc -out travis-gke-client-secret.json -d
-        - bash $CI_SCRIPTS/gcloud-login.sh
+#        - bash $CI_SCRIPTS/gcloud-login.sh
       deploy:
         provider: script
         skip_cleanup: true
-        script: bash $CI_SCRIPTS/gke-deploy.sh ${PROJECT_NAME,,} ${TRAVIS_REPO_SLUG,,} ${TRAVIS_BRANCH,,}
+        script: bash $CI_SCRIPTS/script.sh ${PROJECT_NAME,,} ${TRAVIS_REPO_SLUG,,} ${TRAVIS_BRANCH,,}
         on:
           branch: google-kubernetes-engine
-      cache:
-        directories:
-          - $GCLOUD_HOME/
+#      cache:
+#        directories:
+#          - $GCLOUD_HOME/
